<?xml version="1.0"?>
<package>
  <name>gst_streamer</name>
  <version>0.1.0</version>
  <description>A GStreamer wrapper package, intendent mainly for streaming real-time video over the network.</description>

  <maintainer email="gno.sun.sop@gmail.com">Alex Rakita</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/gst_ros</url> -->

  <author email="gno.sun.sop@gmail.com">Alex Rakita</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
